parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LB
    RB

Grammar

Rule 0     S' -> explist
Rule 1     explist -> propexplist
Rule 2     explist -> empty
Rule 3     propexplist -> exp
Rule 4     propexplist -> exp COMMA propexplist
Rule 5     exp -> term
Rule 6     exp -> term binop exp
Rule 7     exp -> IF exp THEN exp ELSE exp
Rule 8     exp -> LET def IN exp
Rule 9     exp -> MAP idlist TO exp
Rule 10    term -> unop term
Rule 11    term -> factor
Rule 12    term -> factor LP explist RP
Rule 13    term -> empty
Rule 14    term -> int
Rule 15    term -> string
Rule 16    term -> bool
Rule 17    factor -> LP exp RP
Rule 18    factor -> prim
Rule 19    factor -> id
Rule 20    def -> id ASSIGN exp SC
Rule 21    def -> id ASSIGN exp SC def
Rule 22    idlist -> propidlist
Rule 23    idlist -> empty
Rule 24    propidlist -> id
Rule 25    propidlist -> id COMMA propidlist
Rule 26    bool -> TRUE
Rule 27    bool -> FALSE
Rule 28    unop -> sign
Rule 29    unop -> TILDE
Rule 30    binop -> sign
Rule 31    binop -> TIMES
Rule 32    binop -> DIVIDE
Rule 33    binop -> EQ
Rule 34    binop -> NEQ
Rule 35    binop -> LT
Rule 36    binop -> GT
Rule 37    binop -> LEQ
Rule 38    binop -> GEQ
Rule 39    binop -> AND
Rule 40    binop -> OR
Rule 41    sign -> PLUS
Rule 42    sign -> MINUS
Rule 43    prim -> NUMQ
Rule 44    prim -> FUNQ
Rule 45    prim -> LISTQ
Rule 46    prim -> EMPTYQ
Rule 47    prim -> CONSQ
Rule 48    prim -> CONS
Rule 49    prim -> FIRST
Rule 50    prim -> REST
Rule 51    prim -> ARITY
Rule 52    id -> type
Rule 53    id -> type int
Rule 54    id -> type string
Rule 55    type -> <empty>
Rule 56    type -> NAME
Rule 57    type -> REGION
Rule 58    type -> SERVER
Rule 59    type -> OS
Rule 60    type -> ID
Rule 61    type -> TAG
Rule 62    int -> DIGIT
Rule 63    int -> DIGIT int
Rule 64    string -> CHARACTER
Rule 65    string -> CHARACTER string
Rule 66    empty -> <empty>
Rule 67    empty -> EMPTY

Terminals, with rules where they appear

AND                  : 39
ARITY                : 51
ASSIGN               : 20 21
CHARACTER            : 64 65
COMMA                : 4 25
CONS                 : 48
CONSQ                : 47
DIGIT                : 62 63
DIVIDE               : 32
ELSE                 : 7
EMPTY                : 67
EMPTYQ               : 46
EQ                   : 33
FALSE                : 27
FIRST                : 49
FUNQ                 : 44
GEQ                  : 38
GT                   : 36
ID                   : 60
IF                   : 7
IN                   : 8
LB                   : 
LEQ                  : 37
LET                  : 8
LISTQ                : 45
LP                   : 12 17
LT                   : 35
MAP                  : 9
MINUS                : 42
NAME                 : 56
NEQ                  : 34
NUMQ                 : 43
OR                   : 40
OS                   : 59
PLUS                 : 41
RB                   : 
REGION               : 57
REST                 : 50
RP                   : 12 17
SC                   : 20 21
SERVER               : 58
TAG                  : 61
THEN                 : 7
TILDE                : 29
TIMES                : 31
TO                   : 9
TRUE                 : 26
error                : 

Nonterminals, with rules where they appear

binop                : 6
bool                 : 16
def                  : 8 21
empty                : 2 13 23
exp                  : 3 4 6 7 7 7 8 9 17 20 21
explist              : 12 0
factor               : 11 12
id                   : 19 20 21 24 25
idlist               : 9
int                  : 14 53 63
prim                 : 18
propexplist          : 1 4
propidlist           : 22 25
sign                 : 28 30
string               : 15 54 65
term                 : 5 6 10
type                 : 52 53 54
unop                 : 10

Parsing method: LALR

state 0

    (0) S' -> . explist
    (1) explist -> . propexplist
    (2) explist -> . empty
    (3) propexplist -> . exp
    (4) propexplist -> . exp COMMA propexplist
    (66) empty -> .
    (67) empty -> . EMPTY
    (5) exp -> . term
    (6) exp -> . term binop exp
    (7) exp -> . IF exp THEN exp ELSE exp
    (8) exp -> . LET def IN exp
    (9) exp -> . MAP idlist TO exp
    (10) term -> . unop term
    (11) term -> . factor
    (12) term -> . factor LP explist RP
    (13) term -> . empty
    (14) term -> . int
    (15) term -> . string
    (16) term -> . bool
    (28) unop -> . sign
    (29) unop -> . TILDE
    (17) factor -> . LP exp RP
    (18) factor -> . prim
    (19) factor -> . id
    (62) int -> . DIGIT
    (63) int -> . DIGIT int
    (64) string -> . CHARACTER
    (65) string -> . CHARACTER string
    (26) bool -> . TRUE
    (27) bool -> . FALSE
    (41) sign -> . PLUS
    (42) sign -> . MINUS
    (43) prim -> . NUMQ
    (44) prim -> . FUNQ
    (45) prim -> . LISTQ
    (46) prim -> . EMPTYQ
    (47) prim -> . CONSQ
    (48) prim -> . CONS
    (49) prim -> . FIRST
    (50) prim -> . REST
    (51) prim -> . ARITY
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIGIT resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for LP resolved as shift
  ! reduce/reduce conflict for TIMES resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for EQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for NEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for AND resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for OR resolved using rule 55 (type -> .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! reduce/reduce conflict for COMMA resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for $end resolved using rule 55 (type -> .)
    EMPTY           shift and go to state 5
    IF              shift and go to state 7
    LET             shift and go to state 8
    MAP             shift and go to state 9
    TILDE           shift and go to state 17
    LP              shift and go to state 12
    DIGIT           shift and go to state 20
    CHARACTER       shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    NUMQ            shift and go to state 26
    FUNQ            shift and go to state 27
    LISTQ           shift and go to state 28
    EMPTYQ          shift and go to state 29
    CONSQ           shift and go to state 30
    CONS            shift and go to state 31
    FIRST           shift and go to state 32
    REST            shift and go to state 33
    ARITY           shift and go to state 34
    TIMES           reduce using rule 55 (type -> .)
    DIVIDE          reduce using rule 55 (type -> .)
    EQ              reduce using rule 55 (type -> .)
    NEQ             reduce using rule 55 (type -> .)
    LT              reduce using rule 55 (type -> .)
    GT              reduce using rule 55 (type -> .)
    LEQ             reduce using rule 55 (type -> .)
    GEQ             reduce using rule 55 (type -> .)
    AND             reduce using rule 55 (type -> .)
    OR              reduce using rule 55 (type -> .)
    COMMA           reduce using rule 55 (type -> .)
    $end            reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41

  ! $end            [ reduce using rule 66 (empty -> .) ]
  ! TIMES           [ reduce using rule 66 (empty -> .) ]
  ! DIVIDE          [ reduce using rule 66 (empty -> .) ]
  ! EQ              [ reduce using rule 66 (empty -> .) ]
  ! NEQ             [ reduce using rule 66 (empty -> .) ]
  ! LT              [ reduce using rule 66 (empty -> .) ]
  ! GT              [ reduce using rule 66 (empty -> .) ]
  ! LEQ             [ reduce using rule 66 (empty -> .) ]
  ! GEQ             [ reduce using rule 66 (empty -> .) ]
  ! AND             [ reduce using rule 66 (empty -> .) ]
  ! OR              [ reduce using rule 66 (empty -> .) ]
  ! PLUS            [ reduce using rule 66 (empty -> .) ]
  ! MINUS           [ reduce using rule 66 (empty -> .) ]
  ! COMMA           [ reduce using rule 66 (empty -> .) ]
  ! DIGIT           [ reduce using rule 55 (type -> .) ]
  ! CHARACTER       [ reduce using rule 55 (type -> .) ]
  ! LP              [ reduce using rule 55 (type -> .) ]
  ! PLUS            [ reduce using rule 55 (type -> .) ]
  ! MINUS           [ reduce using rule 55 (type -> .) ]

    explist                        shift and go to state 1
    propexplist                    shift and go to state 2
    empty                          shift and go to state 3
    exp                            shift and go to state 4
    term                           shift and go to state 6
    unop                           shift and go to state 10
    factor                         shift and go to state 11
    int                            shift and go to state 13
    string                         shift and go to state 14
    bool                           shift and go to state 15
    sign                           shift and go to state 16
    prim                           shift and go to state 18
    id                             shift and go to state 19
    type                           shift and go to state 35

state 1

    (0) S' -> explist .



state 2

    (1) explist -> propexplist .

    $end            reduce using rule 1 (explist -> propexplist .)
    RP              reduce using rule 1 (explist -> propexplist .)


state 3

    (2) explist -> empty .
    (13) term -> empty .

  ! reduce/reduce conflict for $end resolved using rule 2 (explist -> empty .)
  ! reduce/reduce conflict for RP resolved using rule 2 (explist -> empty .)
    $end            reduce using rule 2 (explist -> empty .)
    RP              reduce using rule 2 (explist -> empty .)
    TIMES           reduce using rule 13 (term -> empty .)
    DIVIDE          reduce using rule 13 (term -> empty .)
    EQ              reduce using rule 13 (term -> empty .)
    NEQ             reduce using rule 13 (term -> empty .)
    LT              reduce using rule 13 (term -> empty .)
    GT              reduce using rule 13 (term -> empty .)
    LEQ             reduce using rule 13 (term -> empty .)
    GEQ             reduce using rule 13 (term -> empty .)
    AND             reduce using rule 13 (term -> empty .)
    OR              reduce using rule 13 (term -> empty .)
    PLUS            reduce using rule 13 (term -> empty .)
    MINUS           reduce using rule 13 (term -> empty .)
    COMMA           reduce using rule 13 (term -> empty .)

  ! $end            [ reduce using rule 13 (term -> empty .) ]
  ! RP              [ reduce using rule 13 (term -> empty .) ]


state 4

    (3) propexplist -> exp .
    (4) propexplist -> exp . COMMA propexplist

    $end            reduce using rule 3 (propexplist -> exp .)
    RP              reduce using rule 3 (propexplist -> exp .)
    COMMA           shift and go to state 42


state 5

    (67) empty -> EMPTY .

    $end            reduce using rule 67 (empty -> EMPTY .)
    TIMES           reduce using rule 67 (empty -> EMPTY .)
    DIVIDE          reduce using rule 67 (empty -> EMPTY .)
    EQ              reduce using rule 67 (empty -> EMPTY .)
    NEQ             reduce using rule 67 (empty -> EMPTY .)
    LT              reduce using rule 67 (empty -> EMPTY .)
    GT              reduce using rule 67 (empty -> EMPTY .)
    LEQ             reduce using rule 67 (empty -> EMPTY .)
    GEQ             reduce using rule 67 (empty -> EMPTY .)
    AND             reduce using rule 67 (empty -> EMPTY .)
    OR              reduce using rule 67 (empty -> EMPTY .)
    PLUS            reduce using rule 67 (empty -> EMPTY .)
    MINUS           reduce using rule 67 (empty -> EMPTY .)
    COMMA           reduce using rule 67 (empty -> EMPTY .)
    THEN            reduce using rule 67 (empty -> EMPTY .)
    TO              reduce using rule 67 (empty -> EMPTY .)
    RP              reduce using rule 67 (empty -> EMPTY .)
    ELSE            reduce using rule 67 (empty -> EMPTY .)
    SC              reduce using rule 67 (empty -> EMPTY .)


state 6

    (5) exp -> term .
    (6) exp -> term . binop exp
    (30) binop -> . sign
    (31) binop -> . TIMES
    (32) binop -> . DIVIDE
    (33) binop -> . EQ
    (34) binop -> . NEQ
    (35) binop -> . LT
    (36) binop -> . GT
    (37) binop -> . LEQ
    (38) binop -> . GEQ
    (39) binop -> . AND
    (40) binop -> . OR
    (41) sign -> . PLUS
    (42) sign -> . MINUS

    COMMA           reduce using rule 5 (exp -> term .)
    $end            reduce using rule 5 (exp -> term .)
    THEN            reduce using rule 5 (exp -> term .)
    RP              reduce using rule 5 (exp -> term .)
    ELSE            reduce using rule 5 (exp -> term .)
    SC              reduce using rule 5 (exp -> term .)
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    EQ              shift and go to state 47
    NEQ             shift and go to state 48
    LT              shift and go to state 49
    GT              shift and go to state 50
    LEQ             shift and go to state 51
    GEQ             shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25

    binop                          shift and go to state 43
    sign                           shift and go to state 44

state 7

    (7) exp -> IF . exp THEN exp ELSE exp
    (5) exp -> . term
    (6) exp -> . term binop exp
    (7) exp -> . IF exp THEN exp ELSE exp
    (8) exp -> . LET def IN exp
    (9) exp -> . MAP idlist TO exp
    (10) term -> . unop term
    (11) term -> . factor
    (12) term -> . factor LP explist RP
    (13) term -> . empty
    (14) term -> . int
    (15) term -> . string
    (16) term -> . bool
    (28) unop -> . sign
    (29) unop -> . TILDE
    (17) factor -> . LP exp RP
    (18) factor -> . prim
    (19) factor -> . id
    (66) empty -> .
    (67) empty -> . EMPTY
    (62) int -> . DIGIT
    (63) int -> . DIGIT int
    (64) string -> . CHARACTER
    (65) string -> . CHARACTER string
    (26) bool -> . TRUE
    (27) bool -> . FALSE
    (41) sign -> . PLUS
    (42) sign -> . MINUS
    (43) prim -> . NUMQ
    (44) prim -> . FUNQ
    (45) prim -> . LISTQ
    (46) prim -> . EMPTYQ
    (47) prim -> . CONSQ
    (48) prim -> . CONS
    (49) prim -> . FIRST
    (50) prim -> . REST
    (51) prim -> . ARITY
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIGIT resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for LP resolved as shift
  ! reduce/reduce conflict for TIMES resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for EQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for NEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for AND resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for OR resolved using rule 55 (type -> .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! reduce/reduce conflict for THEN resolved using rule 55 (type -> .)
    IF              shift and go to state 7
    LET             shift and go to state 8
    MAP             shift and go to state 9
    TILDE           shift and go to state 17
    LP              shift and go to state 12
    EMPTY           shift and go to state 5
    DIGIT           shift and go to state 20
    CHARACTER       shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    NUMQ            shift and go to state 26
    FUNQ            shift and go to state 27
    LISTQ           shift and go to state 28
    EMPTYQ          shift and go to state 29
    CONSQ           shift and go to state 30
    CONS            shift and go to state 31
    FIRST           shift and go to state 32
    REST            shift and go to state 33
    ARITY           shift and go to state 34
    TIMES           reduce using rule 55 (type -> .)
    DIVIDE          reduce using rule 55 (type -> .)
    EQ              reduce using rule 55 (type -> .)
    NEQ             reduce using rule 55 (type -> .)
    LT              reduce using rule 55 (type -> .)
    GT              reduce using rule 55 (type -> .)
    LEQ             reduce using rule 55 (type -> .)
    GEQ             reduce using rule 55 (type -> .)
    AND             reduce using rule 55 (type -> .)
    OR              reduce using rule 55 (type -> .)
    THEN            reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41

  ! TIMES           [ reduce using rule 66 (empty -> .) ]
  ! DIVIDE          [ reduce using rule 66 (empty -> .) ]
  ! EQ              [ reduce using rule 66 (empty -> .) ]
  ! NEQ             [ reduce using rule 66 (empty -> .) ]
  ! LT              [ reduce using rule 66 (empty -> .) ]
  ! GT              [ reduce using rule 66 (empty -> .) ]
  ! LEQ             [ reduce using rule 66 (empty -> .) ]
  ! GEQ             [ reduce using rule 66 (empty -> .) ]
  ! AND             [ reduce using rule 66 (empty -> .) ]
  ! OR              [ reduce using rule 66 (empty -> .) ]
  ! PLUS            [ reduce using rule 66 (empty -> .) ]
  ! MINUS           [ reduce using rule 66 (empty -> .) ]
  ! THEN            [ reduce using rule 66 (empty -> .) ]
  ! DIGIT           [ reduce using rule 55 (type -> .) ]
  ! CHARACTER       [ reduce using rule 55 (type -> .) ]
  ! LP              [ reduce using rule 55 (type -> .) ]
  ! PLUS            [ reduce using rule 55 (type -> .) ]
  ! MINUS           [ reduce using rule 55 (type -> .) ]

    exp                            shift and go to state 55
    term                           shift and go to state 6
    unop                           shift and go to state 10
    factor                         shift and go to state 11
    empty                          shift and go to state 56
    int                            shift and go to state 13
    string                         shift and go to state 14
    bool                           shift and go to state 15
    sign                           shift and go to state 16
    prim                           shift and go to state 18
    id                             shift and go to state 19
    type                           shift and go to state 35

state 8

    (8) exp -> LET . def IN exp
    (20) def -> . id ASSIGN exp SC
    (21) def -> . id ASSIGN exp SC def
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

    DIGIT           reduce using rule 55 (type -> .)
    CHARACTER       reduce using rule 55 (type -> .)
    ASSIGN          reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41

    def                            shift and go to state 57
    id                             shift and go to state 58
    type                           shift and go to state 35

state 9

    (9) exp -> MAP . idlist TO exp
    (22) idlist -> . propidlist
    (23) idlist -> . empty
    (24) propidlist -> . id
    (25) propidlist -> . id COMMA propidlist
    (66) empty -> .
    (67) empty -> . EMPTY
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

  ! reduce/reduce conflict for TO resolved using rule 55 (type -> .)
    EMPTY           shift and go to state 5
    DIGIT           reduce using rule 55 (type -> .)
    CHARACTER       reduce using rule 55 (type -> .)
    COMMA           reduce using rule 55 (type -> .)
    TO              reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41

  ! TO              [ reduce using rule 66 (empty -> .) ]

    idlist                         shift and go to state 59
    propidlist                     shift and go to state 60
    empty                          shift and go to state 61
    id                             shift and go to state 62
    type                           shift and go to state 35

state 10

    (10) term -> unop . term
    (10) term -> . unop term
    (11) term -> . factor
    (12) term -> . factor LP explist RP
    (13) term -> . empty
    (14) term -> . int
    (15) term -> . string
    (16) term -> . bool
    (28) unop -> . sign
    (29) unop -> . TILDE
    (17) factor -> . LP exp RP
    (18) factor -> . prim
    (19) factor -> . id
    (66) empty -> .
    (67) empty -> . EMPTY
    (62) int -> . DIGIT
    (63) int -> . DIGIT int
    (64) string -> . CHARACTER
    (65) string -> . CHARACTER string
    (26) bool -> . TRUE
    (27) bool -> . FALSE
    (41) sign -> . PLUS
    (42) sign -> . MINUS
    (43) prim -> . NUMQ
    (44) prim -> . FUNQ
    (45) prim -> . LISTQ
    (46) prim -> . EMPTYQ
    (47) prim -> . CONSQ
    (48) prim -> . CONS
    (49) prim -> . FIRST
    (50) prim -> . REST
    (51) prim -> . ARITY
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIGIT resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for LP resolved as shift
  ! reduce/reduce conflict for TIMES resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for EQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for NEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for AND resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for OR resolved using rule 55 (type -> .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! reduce/reduce conflict for COMMA resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for $end resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for THEN resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for RP resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for ELSE resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for SC resolved using rule 55 (type -> .)
    TILDE           shift and go to state 17
    LP              shift and go to state 12
    EMPTY           shift and go to state 5
    DIGIT           shift and go to state 20
    CHARACTER       shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    NUMQ            shift and go to state 26
    FUNQ            shift and go to state 27
    LISTQ           shift and go to state 28
    EMPTYQ          shift and go to state 29
    CONSQ           shift and go to state 30
    CONS            shift and go to state 31
    FIRST           shift and go to state 32
    REST            shift and go to state 33
    ARITY           shift and go to state 34
    TIMES           reduce using rule 55 (type -> .)
    DIVIDE          reduce using rule 55 (type -> .)
    EQ              reduce using rule 55 (type -> .)
    NEQ             reduce using rule 55 (type -> .)
    LT              reduce using rule 55 (type -> .)
    GT              reduce using rule 55 (type -> .)
    LEQ             reduce using rule 55 (type -> .)
    GEQ             reduce using rule 55 (type -> .)
    AND             reduce using rule 55 (type -> .)
    OR              reduce using rule 55 (type -> .)
    COMMA           reduce using rule 55 (type -> .)
    $end            reduce using rule 55 (type -> .)
    THEN            reduce using rule 55 (type -> .)
    RP              reduce using rule 55 (type -> .)
    ELSE            reduce using rule 55 (type -> .)
    SC              reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41

  ! TIMES           [ reduce using rule 66 (empty -> .) ]
  ! DIVIDE          [ reduce using rule 66 (empty -> .) ]
  ! EQ              [ reduce using rule 66 (empty -> .) ]
  ! NEQ             [ reduce using rule 66 (empty -> .) ]
  ! LT              [ reduce using rule 66 (empty -> .) ]
  ! GT              [ reduce using rule 66 (empty -> .) ]
  ! LEQ             [ reduce using rule 66 (empty -> .) ]
  ! GEQ             [ reduce using rule 66 (empty -> .) ]
  ! AND             [ reduce using rule 66 (empty -> .) ]
  ! OR              [ reduce using rule 66 (empty -> .) ]
  ! PLUS            [ reduce using rule 66 (empty -> .) ]
  ! MINUS           [ reduce using rule 66 (empty -> .) ]
  ! COMMA           [ reduce using rule 66 (empty -> .) ]
  ! $end            [ reduce using rule 66 (empty -> .) ]
  ! THEN            [ reduce using rule 66 (empty -> .) ]
  ! RP              [ reduce using rule 66 (empty -> .) ]
  ! ELSE            [ reduce using rule 66 (empty -> .) ]
  ! SC              [ reduce using rule 66 (empty -> .) ]
  ! DIGIT           [ reduce using rule 55 (type -> .) ]
  ! CHARACTER       [ reduce using rule 55 (type -> .) ]
  ! LP              [ reduce using rule 55 (type -> .) ]
  ! PLUS            [ reduce using rule 55 (type -> .) ]
  ! MINUS           [ reduce using rule 55 (type -> .) ]

    unop                           shift and go to state 10
    term                           shift and go to state 63
    factor                         shift and go to state 11
    empty                          shift and go to state 56
    int                            shift and go to state 13
    string                         shift and go to state 14
    bool                           shift and go to state 15
    sign                           shift and go to state 16
    prim                           shift and go to state 18
    id                             shift and go to state 19
    type                           shift and go to state 35

state 11

    (11) term -> factor .
    (12) term -> factor . LP explist RP

    TIMES           reduce using rule 11 (term -> factor .)
    DIVIDE          reduce using rule 11 (term -> factor .)
    EQ              reduce using rule 11 (term -> factor .)
    NEQ             reduce using rule 11 (term -> factor .)
    LT              reduce using rule 11 (term -> factor .)
    GT              reduce using rule 11 (term -> factor .)
    LEQ             reduce using rule 11 (term -> factor .)
    GEQ             reduce using rule 11 (term -> factor .)
    AND             reduce using rule 11 (term -> factor .)
    OR              reduce using rule 11 (term -> factor .)
    PLUS            reduce using rule 11 (term -> factor .)
    MINUS           reduce using rule 11 (term -> factor .)
    COMMA           reduce using rule 11 (term -> factor .)
    $end            reduce using rule 11 (term -> factor .)
    THEN            reduce using rule 11 (term -> factor .)
    RP              reduce using rule 11 (term -> factor .)
    ELSE            reduce using rule 11 (term -> factor .)
    SC              reduce using rule 11 (term -> factor .)
    LP              shift and go to state 64


state 12

    (17) factor -> LP . exp RP
    (5) exp -> . term
    (6) exp -> . term binop exp
    (7) exp -> . IF exp THEN exp ELSE exp
    (8) exp -> . LET def IN exp
    (9) exp -> . MAP idlist TO exp
    (10) term -> . unop term
    (11) term -> . factor
    (12) term -> . factor LP explist RP
    (13) term -> . empty
    (14) term -> . int
    (15) term -> . string
    (16) term -> . bool
    (28) unop -> . sign
    (29) unop -> . TILDE
    (17) factor -> . LP exp RP
    (18) factor -> . prim
    (19) factor -> . id
    (66) empty -> .
    (67) empty -> . EMPTY
    (62) int -> . DIGIT
    (63) int -> . DIGIT int
    (64) string -> . CHARACTER
    (65) string -> . CHARACTER string
    (26) bool -> . TRUE
    (27) bool -> . FALSE
    (41) sign -> . PLUS
    (42) sign -> . MINUS
    (43) prim -> . NUMQ
    (44) prim -> . FUNQ
    (45) prim -> . LISTQ
    (46) prim -> . EMPTYQ
    (47) prim -> . CONSQ
    (48) prim -> . CONS
    (49) prim -> . FIRST
    (50) prim -> . REST
    (51) prim -> . ARITY
    (52) id -> . type
    (53) id -> . type int
    (54) id -> . type string
    (55) type -> .
    (56) type -> . NAME
    (57) type -> . REGION
    (58) type -> . SERVER
    (59) type -> . OS
    (60) type -> . ID
    (61) type -> . TAG

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIGIT resolved as shift
  ! shift/reduce conflict for CHARACTER resolved as shift
  ! shift/reduce conflict for LP resolved as shift
  ! reduce/reduce conflict for TIMES resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for EQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for NEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GT resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for LEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for GEQ resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for AND resolved using rule 55 (type -> .)
  ! reduce/reduce conflict for OR resolved using rule 55 (type -> .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! reduce/reduce conflict for RP resolved using rule 55 (type -> .)
    IF              shift and go to state 7
    LET             shift and go to state 8
    MAP             shift and go to state 9
    TILDE           shift and go to state 17
    LP              shift and go to state 12
    EMPTY           shift and go to state 5
    DIGIT           shift and go to state 20
    CHARACTER       shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    NUMQ            shift and go to state 26
    FUNQ            shift and go to state 27
    LISTQ           shift and go to state 28
    EMPTYQ          shift and go to state 29
    CONSQ           shift and go to state 30
    CONS            shift and go to state 31
    FIRST           shift and go to state 32
    REST            shift and go to state 33
    ARITY           shift and go to state 34
    TIMES           reduce using rule 55 (type -> .)
    DIVIDE          reduce using rule 55 (type -> .)
    EQ              reduce using rule 55 (type -> .)
    NEQ             reduce using rule 55 (type -> .)
    LT              reduce using rule 55 (type -> .)
    GT              reduce using rule 55 (type -> .)
    LEQ             reduce using rule 55 (type -> .)
    GEQ             reduce using rule 55 (type -> .)
    AND             reduce using rule 55 (type -> .)
    OR              reduce using rule 55 (type -> .)
    RP              reduce using rule 55 (type -> .)
    NAME            shift and go to state 36
    REGION          shift and go to state 37
    SERVER          shift and go to state 38
    OS              shift and go to state 39
    ID              shift and go to state 40
    TAG             shift and go to state 41
